--- a/media-queries/media-queries.css
+++ b/media-queries/media-queries.css
@@ -327,7 +327,7 @@ div.imgHome-hero {
   .imgHome-hero-tutoring-services-jg {
     position: relative;
     z-index: 995;
-    top: 0rem;
+    top: 10.5rem;
     width: 100%;
     height: 45rem;
     background-image: url("https://cdn-wordpress-info.futurelearn.com/info/wp-content/uploads/FL155_Remote_Teaching_Blog_Image.jpg");
